Fix issue with Hero image displaying too big

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -29,9 +29,10 @@ body {
 
 .button {
     padding: 8px;
+    text-align: center;
     background-color: gray;
     border: none;
-    width: 225px;
+    max-width: 225px;
 }
 
 .button {
@@ -112,7 +113,7 @@ header {
 }
 
 /* right side of the hero */
-#hero-content {
+/* #hero-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -120,7 +121,7 @@ header {
     padding: 0 0 0 24px;
     text-align: left;
     max-width: 300px;
-}
+} */
 
 /* Main */
 .main-container {
@@ -155,8 +156,9 @@ h1.test {
 .container-items {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
+    height: 100%;
     padding: 0 16px;
 }
 
